load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["update.go"],
    importpath = "github.com/mjm/courier-js/internal/db/expr",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_aws_aws_sdk_go//service/dynamodb:go_default_library"],
)
